--- a/_slides/2020-11-05-sajek.md
+++ b/_slides/2020-11-05-sajek.md
@@ -3,6 +3,8 @@ title: Pics from Sajek Valley, Khagrachari
 item: 1
 auto: true
 loop: true
+pauseOnHover: true
+speed: 1000
 ---
 * ![2020-11-05 06:07:47 1](https://i.imgur.com/98yzwYq.jpg)
 * ![2020-11-05 06:07:49 1](https://i.imgur.com/suJat4t.jpg)
