--- a/_posts/2021-09-26-nix-rant.md
+++ b/_posts/2021-09-26-nix-rant.md
@@ -6,8 +6,10 @@ categories: rants
 tags: nixos rant others
 ---
 
-এই র‍্যান্ট টা আসলে আমার না :3 <br />
-[২০২১-০৯-২৩](https://t.me/chaotic_aur_sac/136195) তারিখে [@lazerl0rd](https://github.com/lazerl0rd "Diab Neiroukh") টেলিগ্রামে এই র‍্যান্টটা পাবলিশ করেছিলেন :upside_down:। আর কথা না বাড়িয়ে র‍্যান্টে চলে যাই।
+এই র‍্যান্ট টা আসলে আমার না :smirk_cat: <br />
+[২০২১-০৯-২৩](https://t.me/chaotic_aur_sac/136195) তারিখে
+[@lazerl0rd](https://github.com/lazerl0rd "Diab Neiroukh") টেলিগ্রামে এই র‍্যান্টটা
+পাবলিশ করেছিলেন :upside_down_face:। আর কথা না বাড়িয়ে র‍্যান্টে চলে যাই।
 
 > নিক্সের বিশেষত্ব আসলে কোথায়? আমি ক'দিন আগে হ্যাকারনিউজে একটা আর্টিকেল পড়লাম[^1] যেখানে একজন নিক্সের "বিজ্ঞাপন" দিচ্ছিল, কিন্তু নিক্সের একমাত্র উল্লেখযোগ্য সুবিধা হল এক লাইব্রেরির একাধিক ভার্সন ইন্সটল করা যায় (প্রত্যেকে আলাদা ডিরেক্টরিতে), কিন্তু এই বৈশিষ্ট্য FHS[^3] এর বিরোধী (নিক্সের অন্যান্য অনেক বৈশিষ্ট্যের মধ্যে)।
 এই বৈশিষ্ট্য ছাড়া অন্যান্য বিষয়ে আমি এই কমেন্ট[^2] ও পরবর্তী কমেন্টগুলোর সাথে মোটামুটি একমত।<br /><br />
