Update profile url
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/content/rants/এমএফএস-এর-বাঁশের-আড়ত.md
+++ b/content/rants/এমএফএস-এর-বাঁশের-আড়ত.md
@@ -27,4 +27,4 @@ series:
 দূর থেকে কে যেন হাকিলো
 > "উপায় আছে, উপায় আছে"।
 
-Credit: [@linuxhasan]({{% whois linuxhasan %}})
+Credit: [@imahbub]({{% whois imahbub %}})
